# scikit-activeml

./: README.rst  codecov.yml  pyproject.toml  requirements.txt  requirements_extra.txt  requirements_max.txt
.github/workflows/: external-pull-request.yml  main.yml  python-publish.yml
docs/: conf.py  contributing.rst  generate.py  index.rst
docs/examples/: README.rst  template_pool.py  template_pool_batch.py  template_pool_regression.py  template_pool_regression_batch.py  template_stream.py
docs/examples/pool/: README.rst
docs/examples/stream/: README.rst
skactiveml/: base.py
skactiveml/classifier/: _wrapper.py
skactiveml/classifier/multiannotator/: _annotator_ensemble_classifier.py
skactiveml/pool/: __init__.py  _badge.py  _bald.py  _clue.py  _contrastive_al.py  _core_set.py  _cost_embedding_al.py  _discriminative_al.py  _drop_query.py  _epistemic_uncertainty_sampling.py  _expected_error_reduction.py  _expected_model_change_maximization.py  _expected_model_output_change.py  _expected_model_variance.py  _falcun.py  _four_ds.py  _greedy_sampling.py  _information_gain_maximization.py  _label_cardinality_inconsistency.py  _mmc.py  _prob_cover.py  _probabilistic_al.py  _query_by_committee.py  _random_sampling.py  _regression_tree_based_al.py  _typi_clust.py  _uncertainty_sampling.py  _wrapper.py
skactiveml/pool/tests/: test_epistemic_uncertainty_sampling.py  test_prob_cover.py  (+2 more)
skactiveml/stream/: __init__.py  _density_uncertainty.py  _stream_probabilistic_al.py  _uncertainty_zliobaite.py
skactiveml/tests/: template_query_strategy.py  test_examples.py
skactiveml/utils/: _validation.py
skactiveml/visualization/: _feature_space.py
tutorials/: 01_deep_pool_al_with_skorch.ipynb  03_pool_oracle_annotations.ipynb  05_pool_al_with_self_supervised_learning.ipynb  07_pool_multilabel_getting_started.ipynb  08_pool_multilabel_birdset.ipynb  09_pool_multilabel_nlp.ipynb
(+4 files in other folders)
